[tool.poetry]
name = "bigcommerce-cli"
version = "0.1.0"
description = "BigCommerce Management CLI"
authors = ["dhartle4 <dhartle4@uncc.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.27.1"
prettytable = "^3.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bcli = "bigcommerce_cli.commands:bcli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
