[tool.poetry]
name = "bigcommerce-cli"
version = "0.1.2"
description = "bcli is BigCommerce store management on the command line."
authors = ["dhartle4 <dhartle4@uncc.edu>"]
readme = "README.md"
homepage = "https://github.com/dhartle4/bcli"
repository = "https://github.com/dhartle4/bcli"
keywords = ["bigcommerce", "cli"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.27.1"
prettytable = "^3.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bcli = "bigcommerce_cli.commands:bcli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
